# ProQuatroSimulatorHD_Saphire_edition

./: README  StartWindow.py  gameController.py  graphique.py  pyproject.toml  regles.py  test.py  test_pgu.py
MCTS/: UCT.py
Players/: MinMaxAIPlayer.py
TrainingGame/: Shape.py  gameController.py  main.py
src/: AppController.py  MyApp.py  Shape.py  StartWindow.py  State.py  gameController.py  gameController_v0.py  gameState.py  gameView.py  main.py  test_tree.py
src/Application/: main.py
src/Application/Controllers/: AppController.py  GameController.py
src/Application/Views/: AppView.py  GameView.py
src/Dialogs/: NewDialog.py  QuitDialog.py  WelcomeDialog.py
src/MCTS/: Node.py  State.py  UCT.py  UCT_fromRef.py
src/MinMax/: MinMaxTree.py
src/Players/: AIPlayer.py  HumanPlayer.py  MCTSAIPlayer.py  MinMaxAIPlayer.py  Player.py
src/tree/: MinMaxTree.py  Node.py  State.py
