[tool.poetry]
name = "QuartoAI"
version = "0.1.0"
description = "An implementation of the game Quarto"
authors = ["Redhwane Ben Salem, Luka Bonheure, Maxime Pellichero"]


[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.3"
customtkinter = "5.1.3"
pygame = "2.3.0"
pygame-pgu = "0.21"

[tool.poetry.dev-dependencies]